completed webpage for min screen 1200px

--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,5 +1,6 @@
 header {
     background-image: url('../img/photo-head.png');
+    background-size: 100%;
     background-position: center;
     height: 500px;
     .head-pic {
