--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -71,14 +71,15 @@ main {
                 flex-basis: 50%;
             }
             .column-five-half {
-               height: 235px;
-               flex-basis: 25%; 
+                height: 235px;
+                flex-basis: 25%;
             }
         }
     }
     .testimonial {
         height: 300px;
         background-image: url('../img/testemonial-bg.png');
+        background-size: 100%;
         text-align: center;
         box-sizing: border-box;
         .quote,
@@ -95,6 +96,225 @@ main {
             margin: 2% 6% 0 0;
             font-size: 24px;
             text-align: right;
+        }
+    }
+    .news {
+        padding: 77px 0 80px 0;
+        background-color: #cdcdcd;
+        box-sizing: border-box;
+        h2 {
+            margin-bottom: 82px;
+            text-align: center;
+            color: #252222;
+            font-family: "Bebas Neue";
+            font-size: 48px;
+            font-weight: 400;
+        }
+        .news-posts {
+            display: flex;
+            justify-content: space-around;
+            box-sizing: border-box;
+            .post {
+                position: relative;
+                flex-basis: 45%;
+                .post-name {
+                    margin-bottom: 27px;
+                    display: flex;
+                    justify-content: space-between;
+                    p {
+                        flex-basis: 25%;
+                        text-align: center;
+                    }
+                    .date {
+                        background-color: #59a386;
+                        color: #fffefe;
+                        font-family: "Open Sans";
+                        font-size: 11px;
+                        font-weight: 400;
+                        line-height: 21px;
+                    }
+                    .category {
+                        position: relative;
+                        color: #e74c3c;
+                        font-family: "Open Sans";
+                        font-size: 12px;
+                        font-weight: 600;
+                        font-style: italic;
+                        line-height: 21px;
+                        &:before {
+                            content: '';
+                            position: absolute;
+                            left: 0;
+                            top: 23%;
+                            width: 16px;
+                            height: 13px;
+                            background-image: url('../img/tag-icon.png');
+                        }
+                    }
+                }
+                p {
+                    color: #59a386;
+                    font-family: "Open Sans";
+                    font-size: 16px;
+                    font-weight: 600;
+                    line-height: 21px;
+                }
+                img.photo {
+                    width: 100%;
+                }
+                .description {
+                    color: #666767;
+                    font-family: "Open Sans";
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 21px;
+                }
+                .read-more {
+                    position: absolute;
+                    right: 8%;
+                    bottom: -5%;
+                    a {
+                        position: relative;
+                        color: #e2534b;
+                        font-family: "Open Sans";
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: 21px;
+                        &:after {
+                            content: '';
+                            position: absolute;
+                            top: 20%;
+                            right: -35%;
+                            width: 12px;
+                            height: 13px;
+                            background-image: url('../img/arrow.png');
+                        }
+                    }
+                }
+                .post-name {
+                    color: #59a386;
+                    font-family: "Bebas Neue";
+                    font-size: 18px;
+                    font-weight: 400;
+                    line-height: 20px;
+                    text-transform: uppercase;
+                }
+                .categiries {
+                    margin-bottom: 61px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    li {
+                        margin: 0 5% 2% 0;
+                        flex-basis: 15%;
+                        text-align: center;
+                        background-color: #59a386;
+                        a {
+                            color: #fff;
+                            font-family: "Open Sans";
+                            font-size: 14px;
+                            font-weight: 400;
+                            line-height: 21px;
+                        }
+                        &:hover {
+                            background-color: #e2534b;
+                        }
+                    }
+                }
+                h4 {
+                    font-size: 20px;
+                    line-height: 24px;
+                    color: #252222;
+                    font-family: "Open Sans";
+                    font-weight: 400;
+                    span {
+                        color: #818181;
+                        font-family: "Open Sans Light";
+                        font-style: italic;
+                    }
+                }
+                .posts {
+                    li {
+                        margin-top: 25px;
+                        display: flex;
+                        p {
+                            margin-left: 2%;
+                            span {
+                                opacity: 0.5;
+                                color: #e2534b;
+                                font-family: "Open Sans";
+                                font-size: 13px;
+                                font-weight: 600;
+                                line-height: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .sponsors {
+        height: 200px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #bebebe;
+        box-sizing: border-box;
+    }
+    .bio {
+        padding: 51px 0 80px 0;
+        background-color: #e2534b;
+        box-sizing: border-box;
+        h2 {
+            margin-bottom: 50px;
+            color: #252222;
+            font-family: "Bebas Neue";
+            font-size: 48px;
+            font-weight: 400;
+            text-transform: uppercase;
+            text-align: center;
+        }
+        .bio-wrap {
+            display: flex;
+            .person {
+                flex-basis: 50%;
+                text-align: center;
+                h4 {
+                    margin-bottom: 37px;
+                    color: #fff;
+                    font-family: "Bebas Neue";
+                    font-size: 36px;
+                    font-weight: 400;
+                    line-height: 18px;
+                }
+                .avatar {
+                    margin-bottom: 50px;
+                }
+                .networks {
+                    display: flex;
+                    justify-content: center;
+                    li {
+                        margin-left: 2%;
+                    }
+                }
+            }
+            .person-description {
+                flex-basis: 50%;
+                h5 {
+                    color: #fff;
+                    font-family: "Bebas Neue";
+                    font-size: 18px;
+                    font-weight: 400;
+                    line-height: 48px;
+                }
+                p {
+                    margin-bottom: 15px;
+                    color: #fff;
+                    font-family: "Open Sans";
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 18px;
+                }
+            }
         }
     }
 }
