--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,45 +1,63 @@
 header {
     background-image: url('../img/photo-head.png');
-    background-size: 100%;
     background-position: center;
     height: 500px;
+    @media screen and (min-width: 1600px) {
+        background-size: 100%;
+    }
     .head-pic {
         padding: 14% 0 0 6%;
         h1 {
-        color: #fff;
-        font-family: "Bebas Neue";
-        font-size: 70px;
-        font-weight: 400;
-        text-transform: uppercase;
+            color: #fff;
+            font-family: "Bebas Neue";
+            font-size: 70px;
+            font-weight: 400;
+            text-transform: uppercase;
+            @media screen and (min-width: 1600px) {
+                font-size: 80px;
+            }
         }
         p {
             color: #fff;
             font-family: "Bebas Neue";
             font-size: 36px;
             font-weight: 400;
+            @media screen and (min-width: 1600px) {
+                font-size: 46px;
+            }
         }
     }
 }
 nav {
     padding: 33px 0;
-    height: 100px;
     background-color: #252222;
     box-sizing: border-box;
     .container {
         display: flex;
-        flex-direction: row;
+        flex-wrap: wrap;
         .logo {
             flex-basis: 20%;
+            @media screen and (max-width: 535px) {
+                flex-basis: 100%;
+                text-align: center;
+            }
             a {
                 color: #fff;
                 font-family: "Bebas Neue";
                 font-size: 48px;
                 font-weight: 400;
+                @media screen and (min-width: 1600px) {
+                    font-size: 58px;
+                }
             }
         }
         .main-nav {
             flex-basis: 50%;
             text-align: right;
+            @media screen and (max-width: 535px) {
+                flex-basis: 100%;
+                text-align: center;
+            }
             li {
                 padding: 13px 10px 10px 10px;
                 display: inline-block;
@@ -54,12 +72,19 @@ nav {
                     font-size: 18px;
                     font-weight: 400;
                     color: #fff;
+                    @media screen and (min-width: 1600px) {
+                        font-size: 28px;
+                    }
                 }
             }
         }
         .networks {
             flex-basis: 30%;
             text-align: right;
+            @media screen and (max-width: 535px) {
+                flex-basis: 100%;
+                text-align: center;
+            }
             li {
                 display: inline-block;
             }
