--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -5,7 +5,7 @@ footer {
     flex-direction: column;
     align-items: center;
     background-image: url('../img/footer-bg.png');
-    background-size: 100%;
+    background-size: 100% 100%;
     box-sizing: border-box;
     h2 {
         margin-bottom: 69px;
