--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -4,18 +4,20 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     background-image: url('../img/footer-bg.png');
     background-size: 100% 100%;
     box-sizing: border-box;
     h2 {
-        margin-bottom: 69px;
         color: #252222;
         font-family: "Bebas Neue";
         font-size: 48px;
         font-weight: 400;
+        @media screen and (max-width:430px) {
+            font-size: 24px;
+        }
     }
     button {
-        width: 700px;
         height: 100px;
         border: 5px solid #fff;
         background-color: transparent;
@@ -24,6 +26,9 @@ footer {
         font-size: 60px;
         font-weight: 400;
         line-height: 18px;
+        @media screen and (max-width:430px) {
+            font-size: 30px;
+        }
     }
     p {
         color: #fff;
@@ -31,6 +36,9 @@ footer {
         font-size: 30px;
         font-weight: 400;
         line-height: 58px;
+        @media screen and (max-width:430px) {
+            font-size: 15px;
+        }
     }
     .copiright {
         color: #fff;
@@ -38,8 +46,8 @@ footer {
         font-size: 14px;
         font-weight: 700;
         line-height: 22px;
-    }
-    .address {
-        margin-bottom: 110px;
+        @media screen and (max-width:430px) {
+            font-size: 10px;
+        }
     }
 }
