--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -28,6 +28,9 @@ main {
             flex-flow: row wrap;
             .portfolio-item {
                 height: 255px;
+                display: flex;
+                justify-content:center;
+                align-items: flex-end;
                 flex-basis: 50%;
                 background-image: url('../img/some-photo.png');
                 background-position: center;
@@ -66,6 +69,25 @@ main {
                 }
                 &:nth-child(17) {
                     background-image: url('../img/portf-nine.png');
+                }
+                .hover-element {
+                    padding: 0 20%;
+                    width: 100%;
+                    height: 100%;
+                    display: none;
+                    flex-wrap:wrap;
+                    justify-content:space-around; 
+                    align-items: flex-end;
+                    background-color:rgba(102, 153, 133, .6);
+                    li {
+                        &:first-child {
+                            flex-basis:100%;
+                            text-align:center;
+                        }
+                    }
+                }
+                &:hover .hover-element {
+                    display:flex;
                 }
             }
             .column-three {
